--- a/Diamon/app/src/main/res/values/strings.xml
+++ b/Diamon/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
         <item>Uranus</item>
         <item>Neptune</item>
     </string-array>
+
+    <string name="nav_open"> Open</string>
+    <string name="nav_close">Close</string>
 </resources>
