--- a/Diamon/app/src/main/res/values/strings.xml
+++ b/Diamon/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
 
     <string name="nav_open"> Open</string>
     <string name="nav_close">Close</string>
+    <string name="title_activity_transactions">FullscreenActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
