--- a/Diamon/app/src/main/res/values/strings.xml
+++ b/Diamon/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="title_activity_transactions">FullscreenActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_graph">FullscreenActivity</string>
 </resources>
