--- a/Diamon/app/src/main/res/values/strings.xml
+++ b/Diamon/app/src/main/res/values/strings.xml
@@ -10,6 +10,13 @@
         <item>Saturn</item>
         <item>Uranus</item>
         <item>Neptune</item>
+        <item>Venus</item>
+        <item>Earth</item>
+        <item>Mars</item>
+        <item>Jupiter</item>
+        <item>Saturn</item>
+        <item>Uranus</item>
+        <item>Neptune</item>
     </string-array>
 
     <string name="nav_open"> Open</string>
